# hello_sfml

./: CMakeLists.txt  README.md  main.cpp
